--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         function sendToAppInventor(message) {
             if (typeof AppInventor !== "undefined") {
                 AppInventor.setWebViewString(message);
+                console.log(message);
             } else {
                 alert("Erreur : Cette fonction ne fonctionne que dans WebViewer de MIT App Inventor.");
             }
