--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 </head>
 <body>
     <h2>Envoyer un Message Bluetooth</h2>
-    <button onclick="sendToAppInventor("Avancer")">Avancer</button>
-    <button onclick="sendToAppInventor("Reculer")">Reculer</button>
-    <button onclick="sendToAppInventor("Gauche")">Gauche</button>
-    <button onclick="sendToAppInventor("Droite")">Droite</button>
-    <button onclick="sendToAppInventor("Stop")">Stop</button>
-    <button onclick="sendToAppInventor("Ouvrir")">Ouvrir</button>
-    <button onclick="sendToAppInventor("Fermer")">Fermer</button>
+    <button onclick="sendToAppInventor('Avancer')">Avancer</button>
+    <button onclick="sendToAppInventor('Reculer')">Reculer</button>
+    <button onclick="sendToAppInventor('Gauche')">Gauche</button>
+    <button onclick="sendToAppInventor('Droite')">Droite</button>
+    <button onclick="sendToAppInventor('Stop')">Stop</button>
+    <button onclick="sendToAppInventor('Ouvrir')">Ouvrir</button>
+    <button onclick="sendToAppInventor('Fermer')">Fermer</button>
 </body>
 </html>
