--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>P-rysm</title>
     <script>
         function sendToAppInventor(message) {
-            if (typeof AppInventor !== "undefined") {
-                AppInventor.setWebViewString(message);
-            } else {
-                alert("Erreur : Cette fonction ne fonctionne que dans WebViewer de MIT App Inventor.");
-            }
+//            if (typeof AppInventor !== "undefined") {
+//                AppInventor.setWebViewString(message);
+//            } else {
+//                alert("Erreur : Cette fonction ne fonctionne que dans WebViewer de MIT App Inventor.");
+//            }
+            alert(message);
         }
     </script>
 </head>
