--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             alert(message);
         }
     </script>
+    <style>
+        button {
+            margin: 10px;
+        }
+    </style>
 </head>
 <body>
     <h2>Envoyer un Message Bluetooth</h2>
