--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 </head>
 <body>
     <h2>Envoyer un Message Bluetooth</h2>
-    <button onclick="sendToAppInventor('Avancer')">Avancer</button>
-    <button onclick="sendToAppInventor('Reculer')">Reculer</button>
-    <button onclick="sendToAppInventor('Gauche')">Gauche</button>
-    <button onclick="sendToAppInventor('Droite')">Droite</button>
-    <button onclick="sendToAppInventor('Stop')">Stop</button>
-    <button onclick="sendToAppInventor('Ouvrir')">Ouvrir</button>
-    <button onclick="sendToAppInventor('Fermer')">Fermer</button>
+  <div class="horizontal">
+    <div class="vertical2">
+      <button onclick="sendToAppInventor('Avancer')">Avancer</button>
+      <button onclick="sendToAppInventor('Reculer')">Reculer</button>
+    </div>
+    <div clas="horizontal">
+      <button onclick="sendToAppInventor('Gauche')">Gauche</button>
+      <button onclick="sendToAppInventor('Droite')">Droite</button>
+    </div>
+      <button onclick="sendToAppInventor('Stop')">Stop</button>
+      <button onclick="sendToAppInventor('Ouvrir')">Ouvrir</button>
+      <button onclick="sendToAppInventor('Fermer')">Fermer</button>
+  </div>
     <script src="main.js"></script>
 </body>
 </html>
